[project]
name = "geojson-viewer"
version = "0.2"
description = "Simple CLI for Opening geoJSON Files on a Folium Map"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "pywebview>=6.1",
]

[dependency-groups]
build = [
    "pycrucible>=0.4.3",
]

[project.scripts]
geojson-viewer = "main:main"

[tool.ruff]
line-length = 150

[tool.pycrucible]
entrypoint = "main.py"
